--- a/index.html
+++ b/index.html
@@ -1,368 +1,256 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>My first Three.js app</title>
+		<title>three.js webgl - Depth Texture</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+		<link type="text/css" rel="stylesheet" href="main.css">
 		<style>
-			body { margin: 0px; padding: 0px; overflow:hidden; }
-			canvas { width: 100%; height: 100% }
+			#error {
+				margin: auto;
+				margin-top: 40px;
+				display: block;
+				max-width: 400px;
+				padding: 20px;
+				background: #CE0808;
+			}
 		</style>
+
+		<script id="post-vert" type="x-shader/x-vertex">
+			varying vec2 vUv;
+
+			void main() {
+				vUv = uv;
+				gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
+			}
+		</script>
+		<script id="post-frag" type="x-shader/x-fragment">
+			#include <packing>
+
+			varying vec2 vUv;
+			uniform sampler2D tDiffuse;
+			uniform sampler2D tDepth;
+			uniform float cameraNear;
+			uniform float cameraFar;
+
+
+			float readDepth( sampler2D depthSampler, vec2 coord ) {
+				float fragCoordZ = texture2D( depthSampler, coord ).x;
+				float viewZ = perspectiveDepthToViewZ( fragCoordZ, cameraNear, cameraFar );
+				return viewZToOrthographicDepth( viewZ, cameraNear, cameraFar );
+			}
+
+			void main() {
+				//vec3 diffuse = texture2D( tDiffuse, vUv ).rgb;
+				float depth = readDepth( tDepth, vUv );
+
+				gl_FragColor.rgb = 1.0 - vec3( depth );
+				gl_FragColor.a = 1.0;
+			}
+		</script>
+
 	</head>
 	<body>
-		<script src="js/three.min.js"></script>
-		<script src="js/TrackballControls.js"></script>
-		<script>
-			//
-			// Cube geometry
-			//
-			//   4+--------+7
-			//   /|       /|
-			// 5+--------+6|
-			//  | |      | |
-			//  |0+------|-+3
-			//  |/       |/
-			// 1+--------+2
-			//
-			var cube_vertices = {
-				0: [-1.0, -1.0, -1.0],
-				1: [ 1.0, -1.0, -1.0],
-				2: [ 1.0,  1.0, -1.0],
-				3: [-1.0,  1.0, -1.0],
-				4: [-1.0, -1.0,  1.0],
-				5: [ 1.0, -1.0,  1.0],
-				6: [ 1.0,  1.0,  1.0],
-				7: [-1.0,  1.0,  1.0]
-			};
-			var cube_edges = {
-				0:  [0, 1],
-				1:  [1, 2],
-				2:  [2, 3],
-				3:  [3, 0],
-				4:  [0, 4],
-				5:  [1, 5],
-				6:  [2, 6],
-				7:  [3, 7],
-				8:  [4, 5],
-				9:  [5, 6],
-				10: [6, 7],
-				11: [7, 4]
-			};
-			var cube_faces = {
-				0: [0, 3, 2, 1],
-				1: [0, 1, 5, 4],
-				2: [1, 2, 6, 5],
-				3: [2, 3, 7, 6],
-				4: [3, 0, 4, 7],
-				5: [4, 5, 6, 7]
-			};
-			// Cube with holes in geometry and topology
-			//
-			//   4+--------+10
-			//   /|       /|
-			// 7+--------+8|
-			//  | |      | |
-			//  |0+------|-+3
-			//  |/       |/
-			// 1+--------+2
-			//
-			var cube_vertices_holes = {
-				0:  [-1.0, -1.0, -1.0],
-				1:  [ 1.0, -1.0, -1.0],
-				2:  [ 1.0,  1.0, -1.0],
-				3:  [-1.0,  1.0, -1.0],
-				4:  [-1.0, -1.0,  1.0],
-				7:  [ 1.0, -1.0,  1.0],
-				8:  [ 1.0,  1.0,  1.0],
-				10: [-1.0,  1.0,  1.0]
-			};
-			var cube_edges_holes = {
-				0:  [0, 1],
-				1:  [1, 2],
-				2:  [2, 3],
-				3:  [3, 0],
-				4:  [0, 4],
-				5:  [1, 7],
-				6:  [2, 8],
-				7:  [3, 10],
-				8:  [4, 7],
-				9:  [7, 8],
-				10: [8, 10],
-				11: [10, 4]
-			};
-			var cube_faces_holes = {
-				0: [0,  3,  2,  1],
-				1: [0,  1,  7,  4],
-				3: [1,  2,  8,  7],
-				5: [2,  3,  10, 8],
-				8: [3,  0,  4, 10],
-				9: [4,  7,  8, 10]
-			};
-			// Pyramid geometry
-			var pyramid_vertices = {
-				0: [-1.0, -1.0,  0.0],
-				1: [ 1.0, -1.0,  0.0],
-				2: [ 1.0,  1.0,  0.0],
-				3: [-1.0,  1.0,  0.0],
-				4: [ 0.0,  0.0,  1.0]
-			};
-			var pyramid_edges = {
-				0: [0, 1],
-				1: [1, 2],
-				2: [2, 3],
-				3: [3, 0],
-				4: [0, 4],
-				5: [1, 4],
-				6: [2, 4],
-				7: [3, 4]
-			};
-			var pyramid_faces = {
-				0: [0, 3, 2, 1],
-				1: [0, 1, 4],
-				2: [1, 2, 4],
-				3: [2, 3, 4],
-				4: [3, 0, 4]
-			};
+		<div id="info">
+			<a href="https://threejs.org" target="_blank" rel="noopener">threejs</a> webgl - depth texture<br/>
+			Stores render target depth in a texture attachment.<br/>
+			Created by <a href="http://twitter.com/mattdesl" target="_blank" rel="noopener">@mattdesl</a>.
 
-			// Function for creating geometry
-			function create_face_geometry (vertices, faces) {
-				// Create generic geometry
-				var geometry = new THREE.Geometry();
-				// Create empty look up table
-				var la_table = {};
-				// Initial index used as value in look up table
-				var index = 0;
-				// Add vertices to geometry
-				for (var key in vertices) {
-					geometry.vertices.push(
-						new THREE.Vector3(
-							vertices[key][0],
-							vertices[key][1],
-							vertices[key][2]
-							)
-						);
-					// Create mapping for Three.js, because it
-					// expects array, not hash table
-					la_table[key] = index++;
-				};
-				// Add faces to geometry
-				for (var key in faces) {
-					// Triangle
-					if(faces[key].length === 3) {
-						geometry.faces.push(
-							new THREE.Face3(
-								la_table[ faces[key][0] ],
-								la_table[ faces[key][1] ],
-								la_table[ faces[key][2] ]
-								)
-							);
-					// Quad
-					} else if (faces[key].length === 4) {
-						//
-						// 0 +--+ 3
-						//   |\ |
-						//   | \|
-						// 1 +--+ 2
-						//
-						geometry.faces.push(
-							new THREE.Face3(
-								la_table[ faces[key][0] ],
-								la_table[ faces[key][1] ],
-								la_table[ faces[key][2] ]
-								)
-							);
-						geometry.faces.push(
-							new THREE.Face3(
-								la_table[ faces[key][0] ],
-								la_table[ faces[key][2] ],
-								la_table[ faces[key][3] ]
-								)
-							);
-					}
-				};
-				// Recompute normal vectors of faces
-				geometry.computeFaceNormals();
-				// Compute bounding box of geometry
-				geometry.computeBoundingBox();
+			<div id="error" style="display: none;">
+			Your browser does not support <strong>WEBGL_depth_texture</strong>.<br/><br/>
+			This demo will not work.
+			</div>
+		</div>
 
-				return geometry;
-			}
+		<!-- Import maps polyfill -->
+		<!-- Remove this when import maps will be widely supported -->
+		<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
 
-			// Function for creating geometry for edges
-			function create_edge_geometry (vertices, edges) {
-				// Create generic geometry
-				var geometry = new THREE.Geometry();
-				// Push pairs of vertices to geometry
-				for (var key in edges) {
-					// Push first vertex
-					geometry.vertices.push(
-						new THREE.Vector3(
-							vertices[edges[key][0]][0],
-							vertices[edges[key][0]][1],
-							vertices[edges[key][0]][2]
-							)
-						);
-					// Push second vertex
-					geometry.vertices.push(
-						new THREE.Vector3(
-							vertices[edges[key][1]][0],
-							vertices[edges[key][1]][1],
-							vertices[edges[key][1]][2]
-							)
-						);
+		<script type="importmap">
+			{
+				"imports": {
+					"three": "../build/three.module.js",
+					"three/addons/": "./jsm/"
 				}
-				geometry.computeBoundingSphere();
-
-				return geometry;
 			}
+		</script>
 
-			// Create scene
-			var scene = new THREE.Scene();
+		<script type="module">
 
-			// Create camera used for rendering scene
-			var camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
-			camera.position.x = 0.0;
-			camera.position.y = 0.0;
-			camera.position.z = 5.0;
+			import * as THREE from 'three';
 
-			// Create trackball control
-			controls = new THREE.TrackballControls( camera );
+			import Stats from 'three/addons/libs/stats.module.js';
 
-			controls.rotateSpeed = 1.0;
-			controls.zoomSpeed = 1.2;
-			controls.panSpeed = 0.8;
+			import { GUI } from 'three/addons/libs/lil-gui.module.min.js';
+			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 
-			controls.noZoom = false;
-			controls.noPan = false;
+			let camera, scene, renderer, controls, stats;
+			let target;
+			let postScene, postCamera, postMaterial;
+			let supportsExtension = true;
 
-			controls.staticMoving = true;
-			controls.dynamicDampingFactor = 0.3;
-
-			controls.keys = [ 65, 83, 68 ];
-
-			controls.addEventListener( 'change', render );
-
-			// Create renderer
-			var renderer = new THREE.WebGLRenderer( { antialias: true } );
-			renderer.setSize( window.innerWidth, window.innerHeight );
-			document.body.appendChild( renderer.domElement );
-
-			// Crete geometry for faces from hash table of vertices and faces
-			//cube_face_geometry = create_face_geometry(cube_vertices, cube_faces);
-			cube_face_geometry = create_face_geometry(cube_vertices_holes, cube_faces_holes);
-			pyramid_face_geometry = create_face_geometry(pyramid_vertices, pyramid_faces);
-
-			// Create simple material (cyan)
-			var solid_cyan_material = new THREE.MeshLambertMaterial( { color: 0x5ce5ff } );
-			// Create simple material (red)
-			var solid_red_material = new THREE.MeshLambertMaterial( { color: 0xff0000 } );
-			// Create simple material for edges
-			var edge_material = new THREE.LineBasicMaterial( { color: 0xffffff } );
-
-			// Crete geometry for edges from hash table of vertices and edges
-			//var cube_edge_geometry = create_edge_geometry( cube_vertices, cube_edges );
-			var cube_edge_geometry = create_edge_geometry( cube_vertices_holes, cube_edges_holes );
-			var pyramid_edge_geometry = create_edge_geometry( pyramid_vertices, pyramid_edges );
-
-			// Create solid mesh from geometry and solid material
-			var cube_face_mesh = new THREE.Mesh( cube_face_geometry, solid_cyan_material );
-			// Create edge mesh from geometry and edge material
-			var cube_edge_mesh = new THREE.Line( cube_edge_geometry, edge_material, THREE.LinePieces );
-
-			// Create 3D object of two meshes (Cube)
-			cube_obj3d = new THREE.Object3D()
-			cube_obj3d.add( cube_face_mesh );
-			cube_obj3d.add( cube_edge_mesh );
-			// Set position of object
-			cube_obj3d.position.x = 0.0;
-			cube_obj3d.position.y = 0.0;
-			cube_obj3d.position.z = 1.0;
-			// Set scale of object
-			cube_obj3d.scale.x = 1.0;
-			cube_obj3d.scale.y = 1.0;
-			cube_obj3d.scale.z = 1.0;
-			// Set rotation using quaternion
-			cube_obj3d.quaternion.x = 0.0;
-			cube_obj3d.quaternion.y = 0.0;
-			cube_obj3d.quaternion.z = 0.0;
-			cube_obj3d.quaternion.w = 1.0;
-
-			// Create solid mesh from geometry and solid material
-			var pyramid_face_mesh = new THREE.Mesh( pyramid_face_geometry, solid_red_material );
-			// Create edge mesh from geometry and edge material
-			var pyramid_edge_mesh = new THREE.Line( pyramid_edge_geometry, edge_material, THREE.LinePieces );
-
-			// Create 3D object of two meshes (Pyramid)
-			pyramid_obj3d = new THREE.Object3D()
-			pyramid_obj3d.add( pyramid_face_mesh );
-			pyramid_obj3d.add( pyramid_edge_mesh );
-			// Set position of object
-			pyramid_obj3d.position.x = 2.5;
-			pyramid_obj3d.position.y = 0.0;
-			pyramid_obj3d.position.z = 0.0;
-			// Set scale of object
-			pyramid_obj3d.scale.x = 1.0;
-			pyramid_obj3d.scale.y = 1.0;
-			pyramid_obj3d.scale.z = 1.0;
-			// Set rotation using quaternion
-			pyramid_obj3d.quaternion.x = 0.0;
-			pyramid_obj3d.quaternion.y = 0.0;
-			pyramid_obj3d.quaternion.z = 0.0;
-			pyramid_obj3d.quaternion.w = 1.0;
-
-			// Add 3D objects to the scene
-			scene.add( cube_obj3d );
-			scene.add( pyramid_obj3d );
-
-			// Create a point light
-			var pointLight1 = new THREE.PointLight( 0xffffff );
-			pointLight1.position.x = camera.position.x + 0.1;
-			pointLight1.position.y = camera.position.y + 0.1;
-			pointLight1.position.z = camera.position.z + 1.0;
-			// Add light to the scene
-			scene.add( pointLight1 );
-
-			// Create another point light
-			var pointLight2 = new THREE.PointLight( 0xaaaaaa );
-			pointLight2.position.x = camera.position.x - 2.0;
-			pointLight2.position.y = camera.position.y - 2.0;
-			pointLight2.position.z = camera.position.z - 6.0;
-			// Add light to the scene
-			scene.add( pointLight2 );
-
-			// Callback function for resizing window
-			window.onresize = function(event) {
-				// Update camera
-				camera.aspect = window.innerWidth / window.innerHeight;
-				camera.updateProjectionMatrix();
-				// Update renderer
-				renderer.setSize( window.innerWidth, window.innerHeight);
-
-				controls.handleResize();
+			const params = {
+				format: THREE.DepthFormat,
+				type: THREE.UnsignedShortType
 			};
 
-			function animate() {
-				requestAnimationFrame( animate );
-				// Update position of camera
-				controls.update();
-				// Update position of 1st light
-				pointLight1.position.x = camera.position.x + 0.1;
-				pointLight1.position.y = camera.position.y + 0.1;
-				pointLight1.position.z = camera.position.z + 1.0;
-				// Update position of 2nd light
-				pointLight2.position.x = camera.position.x - 2.0;
-				pointLight2.position.y = camera.position.y - 2.0;
-				pointLight2.position.z = camera.position.z - 6.0;
-				
-				render();
-			};
+			const formats = { DepthFormat: THREE.DepthFormat, DepthStencilFormat: THREE.DepthStencilFormat };
+			const types = { UnsignedShortType: THREE.UnsignedShortType, UnsignedIntType: THREE.UnsignedIntType, UnsignedInt248Type: THREE.UnsignedInt248Type };
 
-			function render() {
-				renderer.render( scene, camera );
-			};
-
-			render();
+			init();
 			animate();
 
+			function init() {
+
+				renderer = new THREE.WebGLRenderer();
+
+				if ( renderer.capabilities.isWebGL2 === false && renderer.extensions.has( 'WEBGL_depth_texture' ) === false ) {
+
+					supportsExtension = false;
+					document.querySelector( '#error' ).style.display = 'block';
+					return;
+
+				}
+
+				renderer.setPixelRatio( window.devicePixelRatio );
+				renderer.setSize( window.innerWidth, window.innerHeight );
+				document.body.appendChild( renderer.domElement );
+
+				//
+
+				stats = new Stats();
+				document.body.appendChild( stats.dom );
+
+				camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 0.01, 50 );
+				camera.position.z = 4;
+
+				controls = new OrbitControls( camera, renderer.domElement );
+				controls.enableDamping = true;
+
+				// Create a render target with depth texture
+				setupRenderTarget();
+
+				// Our scene
+				setupScene();
+
+				// Setup post-processing step
+				setupPost();
+
+				onWindowResize();
+				window.addEventListener( 'resize', onWindowResize );
+
+				//
+				const gui = new GUI( { width: 300 } );
+
+				gui.add( params, 'format', formats ).onChange( setupRenderTarget );
+				gui.add( params, 'type', types ).onChange( setupRenderTarget );
+				gui.open();
+
+			}
+
+			function setupRenderTarget() {
+
+				if ( target ) target.dispose();
+
+				const format = parseFloat( params.format );
+				const type = parseFloat( params.type );
+
+				target = new THREE.WebGLRenderTarget( window.innerWidth, window.innerHeight );
+				target.texture.minFilter = THREE.NearestFilter;
+				target.texture.magFilter = THREE.NearestFilter;
+				target.stencilBuffer = ( format === THREE.DepthStencilFormat ) ? true : false;
+				target.depthTexture = new THREE.DepthTexture();
+				target.depthTexture.format = format;
+				target.depthTexture.type = type;
+
+			}
+
+			function setupPost() {
+
+				// Setup post processing stage
+				postCamera = new THREE.OrthographicCamera( - 1, 1, 1, - 1, 0, 1 );
+				postMaterial = new THREE.ShaderMaterial( {
+					vertexShader: document.querySelector( '#post-vert' ).textContent.trim(),
+					fragmentShader: document.querySelector( '#post-frag' ).textContent.trim(),
+					uniforms: {
+						cameraNear: { value: camera.near },
+						cameraFar: { value: camera.far },
+						tDiffuse: { value: null },
+						tDepth: { value: null }
+					}
+				} );
+				const postPlane = new THREE.PlaneGeometry( 2, 2 );
+				const postQuad = new THREE.Mesh( postPlane, postMaterial );
+				postScene = new THREE.Scene();
+				postScene.add( postQuad );
+
+			}
+
+			function setupScene() {
+
+				scene = new THREE.Scene();
+
+				const geometry = new THREE.TorusKnotGeometry( 1, 0.3, 128, 64 );
+				const material = new THREE.MeshBasicMaterial( { color: 'blue' } );
+
+				const count = 50;
+				const scale = 5;
+
+				for ( let i = 0; i < count; i ++ ) {
+
+					const r = Math.random() * 2.0 * Math.PI;
+					const z = ( Math.random() * 2.0 ) - 1.0;
+					const zScale = Math.sqrt( 1.0 - z * z ) * scale;
+
+					const mesh = new THREE.Mesh( geometry, material );
+					mesh.position.set(
+						Math.cos( r ) * zScale,
+						Math.sin( r ) * zScale,
+						z * scale
+					);
+					mesh.rotation.set( Math.random(), Math.random(), Math.random() );
+					scene.add( mesh );
+
+				}
+
+			}
+
+			function onWindowResize() {
+
+				const aspect = window.innerWidth / window.innerHeight;
+				camera.aspect = aspect;
+				camera.updateProjectionMatrix();
+
+				const dpr = renderer.getPixelRatio();
+				target.setSize( window.innerWidth * dpr, window.innerHeight * dpr );
+				renderer.setSize( window.innerWidth, window.innerHeight );
+
+			}
+
+			function animate() {
+
+				if ( ! supportsExtension ) return;
+
+				requestAnimationFrame( animate );
+
+				// render scene into target
+				renderer.setRenderTarget( target );
+				renderer.render( scene, camera );
+
+				// render post FX
+				postMaterial.uniforms.tDiffuse.value = target.texture;
+				postMaterial.uniforms.tDepth.value = target.depthTexture;
+
+				renderer.setRenderTarget( null );
+				renderer.render( postScene, postCamera );
+
+				controls.update(); // required because damping is enabled
+
+				stats.update();
+
+			}
+
 		</script>
+
 	</body>
 </html>
